Fix layout bugs

--- a/web/components/sections/ImageSection.module.css
+++ b/web/components/sections/ImageSection.module.css
@@ -1,8 +1,10 @@
-@import "../../styles/custom-media.css";
+@import '../../styles/custom-media.css';
 
 .root {
   position: relative;
   padding: 2rem 0;
+  display: flex;
+  justify-content: center;
 
   @media (--media-min-medium) {
     padding: 4rem 0;
